Evolution #762: Autoplay recherche

--- a/src/Muzich/CoreBundle/Resources/views/GlobalSearch/results.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/GlobalSearch/results.html.twig
@@ -46,7 +46,9 @@
         
         {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {
           'noelements_filter' : true,
-          'elements'          : results.elements
+          'elements'          : results.elements,
+          'display_autoplay'     : true,
+          'autoplay_context'     : 'home'
         }%}
         
         {% if display_more_button and results.elements|length %}
