--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -38,7 +38,6 @@ div#header
   background-repeat: repeat-x;
   border-bottom: 3px solid #e51936;
   
-  margin-bottom: 25px;
 }
 
 div#header div#hgroup
@@ -241,6 +240,7 @@ div#languages:hover
   padding-right: 30px;
   float: left;
   position: relative;
+  margin-top: 25px;
 }
 
 aside#sidebar
@@ -254,18 +254,20 @@ aside#sidebar
 aside#sidebar .sidebar
 {
   width: 300px;
+  padding-bottom: 25px;
+  padding-top: 25px;
 /* height: 800px;
  background-color: blue;*/
 }
 
 .top-fixed {
     position: fixed;
-    top: 25px;
+    top: 0;
 }
 
 .bottom-fixed {
     position:fixed;
-    bottom: 25px;
+    bottom: 0;
 }
 
 #mainbox
