--- a/src/Muzich/CoreBundle/Resources/views/Info/container.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Info/container.html.twig
@@ -1,21 +1,26 @@
 <ul class="footer_pages_links footer_pages_links_sys">
   <li>
-    <a href="{{ path('info_about') }}" >
+    <a target="_blank" href="http://blog.muzi.ch/?page_id=5" >
       {{ 'bottom_menu.about'|trans({}, 'navigationui') }}
     </a>
   </li>
   <li>
-    <a href="{{ path('info_development') }}" >
+    <a target="_blank" href="http://blog.muzi.ch/?page_id=7" >
       {{ 'bottom_menu.development'|trans({}, 'navigationui') }}
     </a>
   </li>
   <li>
-    <a href="{{ path('info_sites') }}" >
+    <a target="_blank" href="http://blog.muzi.ch/?page_id=9" >
       {{ 'bottom_menu.sites'|trans({}, 'navigationui') }}
     </a>
   </li>
 </ul>
 <ul class="footer_pages_links footer_pages_links_how">
+  <li>
+    <a href="http://blog.muzi.ch" >
+      Blog
+    </a>
+  </li>
   <li>
     <a href="{{ path('info_cgu') }}" >
       {{ 'bottom_menu.cgu'|trans({}, 'navigationui') }}
