Légères modification de la démo pour playlists

--- a/src/Muzich/CoreBundle/Resources/views/HelpTour/home.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/HelpTour/home.html.twig
@@ -52,9 +52,15 @@
               position : 'B'
             },
             { 
-              element: '#header_menu li a.all_network',
+              element: '#header_menu li a#link_my_network',
               text : {{ 'help_tour.home.network.tour'|trans({}, 'text') }},
               tooltip: {{ 'help_tour.home.network.private'|trans({}, 'text') }},
+              position : 'B'
+            },
+            { 
+              element: '#header_menu li a#link_playlist',
+              text : {{ 'help_tour.home.network.tour'|trans({}, 'text') }},
+              tooltip: {{ 'help_tour.home.network.playlist'|trans({}, 'text') }},
               position : 'B'
             },
             { 
