user echo: en fr

--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -46,7 +46,7 @@
   var _ues = {
   host:'muzich.userecho.com',
   forum:'17651',
-  lang:'en',
+  lang:'fr',
   tab_corner_radius:5,
   tab_font_size:20,
   tab_image_hash:'Vm9zIHJldG91cnM%3D',
