utilisation de jQuery. au lieu de $. pour aSimpletour

--- a/src/Muzich/CoreBundle/Resources/views/HelpTour/home.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/HelpTour/home.html.twig
@@ -5,7 +5,7 @@
       window.start_visit_tour = function()
       {
         
-        $.aSimpleTour({
+        jQuery.aSimpleTour({
           data : [
             { 
               element: '#elements_list', 
