Mise en indépendance du script aSimpletour

--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -7,7 +7,6 @@
   'js/jquery.form-2.14.js'
   'js/jConfirmAction/jconfirmaction.jquery.js'
   'js/jquery.scrollTo.min.js'
-  'js/jquery.aSimpleTour.js'
   'js/jquery.stickysidebar.js'
   'js/jquery.sticky.js'
   '@MuzichCoreBundle/Resources/public/js/TagPrompt.js'
@@ -16,6 +15,7 @@
   '@MuzichCoreBundle/Resources/public/js/autoplay.js'
   '@MuzichCoreBundle/Resources/public/js/muzich.js' %}{# filter='yui_js' %}#}
   <script src="{{ asset_url }}"></script>
+  <script src="/js/jquery.aSimpleTour.js"></script>
 {% endjavascripts %}
 
 <!--<script src="https://w.soundcloud.com/player/api.js"></script>
