Evolution #776: Changer icone add to playlist

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -276,7 +276,7 @@
             href="{{ path('playlists_add_element_prompt', { 'element_id' : element.id }) }}"
             title="{{ 'playlist.add_this_element'|trans({}, 'elements') }}"
           >
-            <img src="{{ asset('/img/icon_add_2.png') }}" alt="add to playlist" />
+            <img src="{{ asset('/img/playlist_add_gray.png') }}" alt="add to playlist" />
           </a>
         </li>
         
