Anomalie #773: Ajouter un partage: fleche buggé

--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -2376,6 +2376,16 @@ div.tags_proposition_view a.darkbutton
   padding: 6px 6px 4px 4px;
 }
 
+a.button_arrow span
+{
+  
+}
+
+a.button_arrow span
+{
+  margin-top: 2px;
+}
+
 /*
 *
 *
