--- a/src/Muzich/CoreBundle/Resources/views/Component/element_add_buttons.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Component/element_add_buttons.html.twig
@@ -5,11 +5,12 @@
   {% set close_class = ''%}
 {% endif %}
 
-<a href="#" id="element_add_link" class="button gradient {{ add_class }}">
-  {{ 'home.add_element'|trans({}, 'navigationui') }}
+<a href="#" id="element_add_link" class="button gradient button_arrow {{ add_class }}">
   <img src="{{ asset('/img/icon_dart_right_white.png') }}" alt="" />
+  <span>{{ 'home.add_element'|trans({}, 'navigationui') }}</span>
 </a>
-<a href="#" id="element_add_close_link" class="button gradient {{ close_class }}" style="display: none;">
-  {{ 'home.add_element_box.close'|trans({}, 'navigationui') }}
+
+<a href="#" id="element_add_close_link" class="button gradient button_arrow {{ close_class }}" style="display: none;">
   <img src="{{ asset('/img/icon_dart_left_white.png') }}" alt="" />
+  <span>{{ 'home.add_element_box.close'|trans({}, 'navigationui') }}</span>
 </a>
