--- a/src/Muzich/CoreBundle/Resources/views/Layout/head.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head.html.twig
@@ -1,7 +1,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
-<meta name="description" content="" />
-<meta name="keywords" content="" />
+<meta name="description" content="{{ 'site.description'|trans({}, 'text') }}" />
+<meta name="keywords" content="music, musique, partage, share, deezer, outube, soundcloud, jamendo" />
 <meta name="author" content="Bastien Sevajol" />
 <link href="apple-touch-icon.png" rel="apple-touch-icon" />
 
