--- a/src/Muzich/UserBundle/Resources/views/Account/subscribe_or_login.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Account/subscribe_or_login.html.twig
@@ -1,11 +1,11 @@
 
-<a href="#" id="registration_link" class="button gradient" style="display: none;">
-  {{ 'registration.display'|trans({}, 'navigationui') }}
+<a href="#" id="registration_link" class="button gradient button_arrow" style="display: none;">
   <img src="{{ asset('/img/icon_dart_right_white.png') }}" alt="" />
+  <span>{{ 'registration.display'|trans({}, 'navigationui') }}</span>
 </a>
-<a href="#" id="login_link" class="button gradient" style="display: none;">
-  {{ 'login.display'|trans({}, 'navigationui') }}
+<a href="#" id="login_link" class="button gradient button_arrow" style="display: none;">
   <img src="{{ asset('/img/icon_dart_left_white.png') }}" alt="" />
+  <span>{{ 'login.display'|trans({}, 'navigationui') }}</span>
 </a>
 
 <div id="login_box" style="display: none;">
