--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -1211,13 +1211,8 @@ div#footer_logo img
 
 div#footer_logo_2
 {
-  line-height: 18px;
   margin-top: 25px;
-  padding-left: 0;
-  padding-right: 40px;
-  text-align: left;
-  width: 135px;
-  float: left;
+  float: right;
 }
 
 div#footer_logo_2 img
