--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -2256,6 +2256,19 @@ a.button img
   float: left;
 }
 
+a.button.simpleimg
+{
+  padding: 6px;
+  
+}
+
+a.button.simpleimg img
+{
+  float: none;
+}
+
+
+
 a.button span
 {
   float: left;
