--- a/src/Muzich/HomeBundle/Resources/views/Component/filter_menu.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Component/filter_menu.html.twig
@@ -1,15 +1,15 @@
 <ul id="tabs_tag_search_buttons">
-  <li id="tab_li_tag_search_no_tags" class="{% if search_tags_id|length == 0 %}selected{% endif %} gradient">
-    <a id="tabs_tag_search_no_tags" href="#" >
-      <img src="{{ asset('/img/icon_close.png') }}" alt="nofilters" />
-      {{ 'filter.clear'|trans({}, 'userui') }}
+  <li id="tab_li_tag_search_no_tags" class="{% if network_public == '1' %}selected{% endif %} gradient">
+    <a id="link_all_network" href="#"  class="all_network">
+      <img src="{{ asset('/img/1372949806_web-hosting-px-png.png') }}" alt="network" />
+      {{ 'filter.network_all'|trans({}, 'userui') }}
     </a>
     <div class="dart"></div>
   </li>
-  <li id="tab_li_tag_search_with_tags" class="{% if search_tags_id|length %}selected{% endif %} gradient">
-    <a id="tabs_tag_search_with_tags" href="#" >
-      <img src="{{ asset('/img/icon_minilogo_2.png') }}" alt="nofilters" />
-      {{ 'filter.mytags'|trans({}, 'userui') }}
+  <li id="tab_li_tag_search_with_tags" class="{% if network_public == '0' and not ids_display %}selected{% endif %} gradient">
+    <a id="link_my_network" href="#" class="my_network" >
+      <img src="{{ asset('/img/icon_friends_little.png') }}" alt="my network" />
+      {{ 'filter.network_my'|trans({}, 'userui') }}
     </a>
     <div class="dart"></div>
   </li>
