Anomalie #806: Liste de lecture publique

--- a/src/Muzich/PlaylistBundle/Resources/views/Show/user.html.twig
+++ b/src/Muzich/PlaylistBundle/Resources/views/Show/user.html.twig
@@ -98,7 +98,7 @@
             >
               {{ playlist.name }}
             </a>
-            {% if app.user|userId == playlist.owner.id %}
+            {% if app.user|userId == playlist.owner.id and playlist.public %}
               {{ 'playlist.public_word'|trans({}, 'elements') }}
             {% endif %}
           </div>
