--- a/src/Muzich/UserBundle/Resources/views/User/account.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/User/account.html.twig
@@ -57,7 +57,7 @@
     <h2 data-open="myaccount_favorites_password">{{ 'my_account.change_password'|trans({}, 'userui') }}</h2>
 
     <div id="myaccount_favorites_password" class="myaccount_part {% if app.request.get('open') == 'change_password' %}flashing{% endif %}" 
-      {% if not app.request.get('open') == 'change_password' %}
+      {% if app.request.get('open') != 'change_password' %}
        style="display: none;"
       {% endif %}
      >
@@ -154,13 +154,12 @@
     <h2 data-open="myaccount_delete">{{ 'my_account.delete.title'|trans({}, 'userui') }}</h2>
   
     <div id="myaccount_delete" class="myaccount_part"
-      {% if not delete_form|form_has_errors and not app.request.get('open') == 'delete' %}
+      {% if app.request.get('open') != 'delete' %}
         style="display: none;"
       {% endif %}
     >
       
-      <p class="warning info">{{ 'my_account.delete.text'|trans({}, 'userui') }}
-      </p>
+      <p class="warning info">{{ 'my_account.delete.text'|trans({}, 'userui') }}</p>
       
       <form
         class="delete"
