Anomalie #810: Side menu: Mes contenus: +playlists

--- a/src/Muzich/CoreBundle/Resources/views/Menu/side_menu.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Menu/side_menu.html.twig
@@ -17,6 +17,11 @@
           </a>
         </li>
         <li class="sub_menu_element">
+          <a href="{{ path('playlists_user', {'user_slug': app.user.slug}) }}">
+            {{ 'container_menu.my_playlists'|trans({}, 'navigationui') }}
+          </a>
+        </li>
+        <li class="sub_menu_element">
           <a href="{{ path('groups_own_list') }}">
             {{ 'network.mygroups'|trans({}, 'navigationui') }}
           </a>
